<resources>
    <string name="app_name">Tennis Scores</string>
    <string name="textView_login">Login</string>
    <string name="textView_email_id">Email Id</string>
    <string name="textView_password">Password</string>
    <string name="textView_or">Or</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="atp_singles_title">ATP SINGLES</string>
    <string name="rankings_title">RANKINGS</string>
    <string name="points_title">POINTS</string>
    <string name="number_title">#</string>
    <string name="signupText">SignUp</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="textview_signup">Signup</string>
</resources>